# Lengine

./: CMakeLists.txt  Lenv.h  README.md
.github/workflows/: cmake-multi-platform.yml
assets/fonts/: Abel_400Regular CREDITS.txt
assets/shaders/: fragment shader.txt  test fragment shader.txt  test vertex shader.txt  texture maping fragment shader.txt  vertex shader.txt
dependencies/: GLFW_dependencies.hpp  OpenGL_dependencies.hpp  SDL_dependencies.hpp  STD_dependencies.hpp
include/engines/Core/: Functions.hpp  Initialization macros.hpp  Libraries.hpp  Objects.hpp  Report.hpp  __init__.hpp
include/engines/GLFW/: Functions.hpp  Lengine.hpp  Renderer.cpp  Renderer.hpp  Window.hpp
include/engines/SDL/: Clock.hpp  Events.hpp  Functions.hpp  Lengine.hpp  Mixer.hpp  Objects.hpp  Renderer.hpp  Window.hpp
include/engines/SDL/events numbering/: EventTypes.hpp  KeyboardKeys.hpp  MouseEvents.hpp
include/implementations/OpenGL/: Program.hpp  Renderer.hpp  Shaders.hpp  Textures.hpp  __init__.hpp
include/implementations/OpenGL/vertexes and buffers/: Index Buffer.hpp  Vertex Array.hpp  Vertex Buffer Layout.hpp  Vertex Buffer.hpp  __init__.hpp
include/utilities/: Animations.hpp  Arrays.hpp  Benchmark.hpp  File Manager.hpp  RayCast.hpp
plugins/: config.c  config_test.c  config_test_config.c  plugin.c  test.c
plugins/map designer/: funcs.h  home.h  map_designer.c  map_designer.h  map_editor.h  tile_setter.h
plugins/map designer/assets/fonts/: Abel_400Regular CREDITS.txt
src/: Lengine.c  environment.c  environment.h  plugins.h
